--- a/1_NMDS_percentcover.Rmd
+++ b/1_NMDS_percentcover.Rmd
@@ -372,7 +372,51 @@ plot_above_df <- scores(abcover_byspecies_NMDS, display = "sites") %>%
  rownames_to_column("standtype_ID") %>% 
   mutate_at(c('standtype_ID'), as.numeric) %>% 
   full_join(abcover_byspecies_nmdsprep, by = "standtype_ID") %>% 
-  dplyr::select(!c(standtype_ID)) 
+  dplyr::select(!c(standtype_ID)) %>% 
+    mutate(group_3 = factor(
+     group_3, levels = c("chaparral", "css", "grass")
+    )
+  ) %>% 
+  mutate(group_2 = factor(
+     group_2, levels = c("HEAR", "no HEAR")
+    )
+  ) %>% 
+   mutate(group_4 = factor(
+     group_4, levels = c("HEAR+CEOL", "HEAR", "SALE+MAFA+ARCA", "PHHU")
+    )
+  ) %>% 
+   mutate(group_6 = factor(
+     group_6, levels = c("HEAR+CEOL", "HEAR", 
+                         "SALE+MAFA+ARCA+STLE+CEME", 
+                         "SALE+MAFA+ARCA+HIIN",
+                         "PHHU", "PHHU+RARU")
+    )
+  ) %>% 
+     mutate(group_10 = factor(
+     group_10, levels = c("HEAR+CEOL", "HEAR", 
+                         "SALE+MAFA+ARCA+STLE+CEME+BRDI",
+                         "SALE+MAFA+ARCA+STLE+CEME+Erodium_spp.",
+                         "SALE+MAFA+ARCA+HIIN+BRHO+CEME",
+                         "SALE+MAFA+ARCA+HIIN+Erodium_spp.",
+                         "PHHU",
+                         "PHHU+BRDI",
+                         "PHHU+ARCA",
+                         "PHHU+RARU")
+    )
+  ) %>% 
+     mutate(group_15 = factor(
+     group_15, levels = c("1", "2", 
+                         "3",
+                         "4",
+                         "5",
+                         "6",
+                         "7",
+                         "8",
+                         "9",
+                         "10", "11", "12", "13", "14", "15")
+    )
+  ) 
+  
 
 # view(plot_above_df)
 
@@ -393,38 +437,67 @@ fit_above_spp <- fit_above %>%
   as.data.frame() %>% 
   rownames_to_column("species") %>% 
   full_join(., fit_above_pvals, by = "species") %>% 
-#  filter(pvals <= 0.001) %>%  # <-- p-value 
- # filter(pvals > 0.001 ) %>%  
-  filter(pvals <= 0.05) %>%
+  filter(pvals <= 0.001) %>%  # <-- p-value 
   filter(!species == 'standtype_ID')
 length(fit_above_spp$species) #  <- limited number for visual clarity
 
-fit_above_spp_p005 <- fit_above %>% 
-  scores(., display = "vectors") %>% 
-  as.data.frame() %>% 
-  rownames_to_column("species") %>% 
-  full_join(., fit_above_pvals, by = "species") %>% 
+fit_above_spp_p005 <- fit_above %>%
+  scores(., display = "vectors") %>%
+  as.data.frame() %>%
+  rownames_to_column("species") %>%
+  full_join(., fit_above_pvals, by = "species") %>%
    filter(pvals <= 0.05) %>%
-  filter(!species == 'standtype_ID') %>% 
-  left_join((abcover_charateristics %>% 
-                distinct(species, .keep_all = TRUE) %>%
-               dplyr::select(species, lifeform, status, lifecycle, family)
-             ), by = "species")
-#write.csv(fit_above_spp_p005, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022/chaparraldegradation_2022/processed/percentcover_nmds_pvalues.csv")
+  filter(!species == 'standtype_ID') #%>%
+  # left_join((abcover_charateristics %>%
+  #               distinct(species, .keep_all = TRUE) %>%
+  #              dplyr::select(species, lifeform, status, lifecycle, family)
+  #            ), by = "species")
+# write.csv(fit_above_spp_p005, "~/Dropbox/GRADSCHOOL/Dissertation/R_dissertation/chaparraldegradation_2022/chaparraldegradation_2022/processed/percentcover_nmds_pvalues.csv")
 ```
+
 ### - nmds x transect w/ species
 ```{r nmds by transect with species percent cover}
 
-nmds.1 <- ggplot(plot_above_df, aes(x = NMDS1, y = NMDS2)) +
-  #coord_fixed() +
-    geom_point(aes( shape = site), size = 5, alpha = 0.8) + #`Bromus rubens`
-  scale_shape_manual(values = c(15, 18, 1, 2, 3, 4, 5)) + 
-  geom_segment(data = fit_above_spp, aes(x = 0, xend = NMDS1, y = 0, yend = NMDS2),
+nmdsabove_plot_site_rep <- ggplot(plot_above_df, 
+                                  aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  #xlim(-1.5,1.5) +
+ # ylim(-1.5,1.5) +
+  geom_point(aes(color = Hillslope, shape = Hillslope), size = 3, alpha = 0.8) +
+  #stat_ellipse(aes(color = site_rep)) +
+  scale_color_manual(values = c( "lightblue", "cornflowerblue", "blue","green", "darkgreen", "orange", "brown")) + #"gray0",
+   scale_shape_manual(values = c(17, 17, 17, 15, 15, 16,16)) + 
+  # labs(name = "Hillslope",
+  #                    labels = c("DEG1" = "Shrub dominated", 
+  #                               "DEG2" = "Matrix", 
+  #                               "ENH1" = "Grass dominated", 
+  #                               "ENH2" = "Shrub dominated", 
+  #                               "INT1" = "Matrix", 
+  #                               "INT2" = "Grass dominated", 
+  #                               "INT3" = "SH3")) + #rename standtypes labels
+  geom_segment(data = fit_above_spp, 
+               aes(x = 0, xend = NMDS1, y = 0, yend = NMDS2),
                arrow = arrow(length = unit(0.25, "cm")),
                col = "black") +
   geom_text(data = fit_above_spp, aes(label = species),  
-            position = position_jitter(width = 0.1, height = 0.1)) +
-  theme_bw() #+
+            position = position_jitter(width = 0.0, height = 0.0)) +
+  theme_bw()
+
+
+nmds.1 <- ggplot(plot_above_df, aes(x = NMDS1, y = NMDS2)) +
+  coord_fixed() +
+  geom_point(aes(color = group_15, shape = group_3), size = 3, alpha = 0.8) + 
+  stat_ellipse(aes(color = group_15), level = 0.95, linetype = 1, linewidth = 0.5) +
+  geom_segment(data = fit_above_spp, # <- p values
+               aes(x = 0, xend = NMDS1, y = 0, yend = NMDS2),
+               arrow = arrow(length = unit(0.25, "cm")),
+               col = "black") +
+  geom_text(data = fit_above_spp, aes(label = species),  
+            position = position_jitter(width = 0.1, height = 0.1)
+            ) +
+  theme_bw() +
+  labs(title = "NMDS of species percent cover grouped by twinspan groups (n = 15) ", color = "Group_15")
+#+
   # theme(legend.position = c(0.125, 0.825))
 nmds.1
 nmds.1
@@ -433,7 +506,7 @@ nmds.1
 nmds.1
 nmds.1
 nmds.1
-#ggsave("Ch1_Degradation_figures/nmds_transectbyspecies.png", nmds.1, width = 8, height = 6)
+# ggsave("Ch1_Degradation_figures/nmds_transectbyspecies.png", nmds.1, width = 8, height = 6)
 # ggsave("Ch1_Degradation_figures/nmds_transectbyspecies_simplified.png", nmds.1, width = 8, height = 6)
 ```
 
