--- a/1.1_transect_continuous.Rmd
+++ b/1.1_transect_continuous.Rmd
@@ -367,7 +367,7 @@ abcover_charateristics_leaftype %>%
   group_by(site, transect) %>%
   summarize(data_points = length(unique(distance))) # number of "hits" per transect
 
-abcover_full %>% 
+abcover_charateristics_leaftype %>% 
   group_by(site) %>%
   summarize(n_transects = length(unique(transect))) # number of transects per site
 # sort(unique(abcover_full$site_rep))
@@ -377,60 +377,63 @@ abcover_full %>%
 abcover_omitground <- abcover_charateristics_leaftype %>% 
   filter(vertical != "ground", 
          vertical != "ground cover") %>% 
-  filter(species != "no_species")
+  filter(species != "no_species", 
+         species != "thatch")
 
 #sort(unique(abcover_omitground$status))
 ```
 
-### subset data by status
+### percent cover by native or non-native stauts - organized by SITE
 ```{r hist percent cover by site and status}
-cover_bystatus <- abcover_omitground %>% 
-  group_by(site, transect, site_rep, year, status) %>% 
+cover_bystatus <- abcover_omitground %>%
+  group_by(site, transect, site_rep, year, status) %>%
   dplyr::summarize(
     count_per_transect = n_distinct(site_rep_dist),
     percentcover = n_distinct(site_rep_dist)/41 # <-- calculate percent cover by transect, lifeform, and status
-    ) 
+    )
 
-#view(cover_bystatus)
-hist(cover_bystatus$percentcover)
-
-# jitter - by site and status
-ggplot(data = cover_bystatus, 
-       aes(y = percentcover*100, x = site, color = status)) + 
-  geom_jitter() +
-  facet_wrap(~status)
+# #view(cover_bystatus)
+# hist(cover_bystatus$percentcover)
+# 
+# # jitter - by site and status
+# ggplot(data = cover_bystatus, 
+#        aes(y = percentcover*100, x = site, color = status)) + 
+#   geom_jitter() +
+#   facet_wrap(~status)
 
 ```
 
-### subset data by lifeform x status
+### percent cover by lifeform x status
 ```{r hist percent cover by lifeform and status}
 
-cover_bylfstatus <- abcover_omitground %>% 
-  group_by(site, transect, site_rep, year, status, lifeform) %>% 
+cover_bylfstatus <- abcover_omitground %>%
+  group_by(site, transect, site_rep, year, status, lifeform) %>%
   dplyr::summarize(
     count_per_transect = n_distinct(site_rep_dist),
     percentcover = n_distinct(site_rep_dist)/41 # <-- calculate percent cover by transect, lifeform, and status
-    ) %>% 
-  ungroup() %>% 
+    ) %>%
+  ungroup() %>%
   unite("lifeform_status", 6:5, sep = "_") #combines characters in two columns to one column, withoutcreating a third column
 
-#view(cover_bystatus_bylf)
-hist(cover_bylfstatus$percentcover) 
-
-# jitter - by site, lifeform, and status
-cover1 <- ggplot(data = cover_bylfstatus, 
-       aes(y = percentcover*100, x = site, color = lifeform_status)) + 
-  geom_point() + 
-  facet_wrap(~lifeform_status)
-
-# ggplot(data = cover_bylfstatus %>% filter(site == "1" | site == "2"), 
+# #view(cover_bystatus_bylf)
+# hist(cover_bylfstatus$percentcover) 
+# 
+# # jitter - all sites
+# cover1 <- ggplot(data = cover_bylfstatus, 
 #        aes(y = percentcover*100, x = site, color = lifeform_status)) + 
 #   geom_point() + 
 #   facet_wrap(~lifeform_status)
-
-# ggplot(data = cover_bylfstatus %>% filter(site == "INT1" | site == "INT2" | site == "INT3" | site == "INT4" | site == "INT5"), 
-#        aes(y = percentcover*100, x = site, color = lifeform_status)) + 
-#   geom_point() + 
+# 
+# # exclude INT transects
+# ggplot(data = cover_bylfstatus %>% filter(site == "1" | site == "2"), 
+#        aes(y = percentcover*100, x = site, color = lifeform_status)) +
+#   geom_point() +
+#   facet_wrap(~lifeform_status)
+# 
+# # only INT sites
+# ggplot(data = cover_bylfstatus %>% filter(site == "INT1" | site == "INT2" | site == "INT3" | site == "INT4" | site == "INT5"),
+#        aes(y = percentcover*100, x = site, color = lifeform_status)) +
+#   geom_point() +
 #   facet_wrap(~lifeform_status)
 
 ```
@@ -475,10 +478,15 @@ cover_byleaftype_wide <- cover_byleaftype %>%
 This is the spread of 
 - non-native grass cover by native shrub cover... 
 ```{r regression nngrass x shrub}
-ggplot(data = cover_bylfstatus_wide, 
+cover1 <- ggplot(data = cover_bylfstatus_wide, 
        aes(y = grass_nonnative*100, x = shrub_native*100)) + 
    geom_point() +
-  geom_smooth(method = "lm", se = TRUE, color = "blue", linetype = "solid") # se = confidence interval 
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
+  labs(
+    x = "Native shrub cover (%)",
+    y = "Non-native grass cover (%)",
+    title = "Linear regression of non-native grass by native shrub percent cover"
+    )
 
 # Fit the linear model
 model.s <- lm(grass_nonnative ~ shrub_native, data = cover_bylfstatus_wide)
@@ -500,12 +508,18 @@ print(paste("Multiple R^2:", r_squared))
 - native shrub cover by non-native grass cover ...
 ```{r regression shrub x nn grass}
 cover2 <- ggplot(data = cover_bylfstatus_wide, 
-       aes(y = shrub_native*100, x = grass_nonnative*100)) + 
-   geom_point() +
-  geom_smooth(method = "lm", se = TRUE, color = "blue", linetype = "solid")  +
+       aes(y = shrub_native*100, x = grass_nonnative*100, color = site)) + 
+   geom_point(size = 3) +
+  scale_color_manual(values = c("blue", "green", "maroon", "maroon", "maroon", "maroon", "maroon")) +
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid")  +
   xlim(0, 100) +
   ylim(0, 100) +
-  theme_bw()
+  theme_bw() +
+  labs(
+    x = "Non-native grass cover (%)",
+    y = "Native shrub cover (%)",
+    title = "Linear regression of native shrub by non-native grass percent cover"
+    )
 
 model.g <- lm(shrub_native ~ grass_nonnative, data = cover_bylfstatus_wide)
 model.g_summary <- summary(model.g)
@@ -517,11 +531,11 @@ print(paste("Multiple R^2:", r_squared))
 ```{r regression shrub leaftype x nn grass}
 sch1 <- ggplot(data = cover_byleaftype_wide) +
   
-  geom_point(aes(x = nonnative_grass_NA * 100, y = native_shrub_nonsclero * 100, color = "Native Shrub Nonsclero", shape = site), size = 4, show.legend = TRUE) +
+  geom_point(aes(x = nonnative_grass_NA * 100, y = native_shrub_nonsclero * 100, color = "Native Shrub Nonsclero"), size = 4, show.legend = TRUE) +
   geom_smooth(aes(x = nonnative_grass_NA * 100, y = native_shrub_nonsclero * 100, color = "Native Shrub Nonsclero"), 
               method = "lm", se = TRUE, linetype = "solid", show.legend = TRUE) +
   
-  geom_point(aes(x = nonnative_grass_NA * 100, y = native_shrub_sclerophyllous * 100, color = "Native Shrub Sclero", shape = site), size = 4,  show.legend = TRUE) +
+  geom_point(aes(x = nonnative_grass_NA * 100, y = native_shrub_sclerophyllous * 100, color = "Native Shrub Sclero"), size = 4,  show.legend = TRUE) +
   geom_smooth(aes(x = nonnative_grass_NA * 100, y = native_shrub_sclerophyllous * 100, color = "Native Shrub Sclero"), 
               method = "lm", se = TRUE, linetype = "dashed", show.legend = TRUE) +
   labs(
