--- a/1.1_transect_continuous.Rmd
+++ b/1.1_transect_continuous.Rmd
@@ -334,17 +334,21 @@ print(sort(shrub_leaftype$species))
 
 -- code to update list of shrub leaf characteristics
 ```{r update schlero leaf data}
-ab_shrubs <- abcover_charateristics %>% 
-   filter(lifeform == "shrub") %>%
-  pull(species) %>% 
-  unique() %>% 
-  sort()
 
-shrub_shrubs <- sort(unique(shrub_leaftype$species))
+#These are the species that are in abcover_full that are NOT in the species list
+ab_shrubs_prep <- abcover_charateristics %>% 
+  filter(lifeform == "shrub")
+ab_shrubs <- sort(unique(ab_shrubs_prep$species))
 
-#These are the shrubs that are in abcover_full that are NOT in the shrub species list
+shrub_shrubs_prep <- specieslist %>% 
+  filter(lifeform == "shrub")
+shrub_shrubs <- sort(unique(shrub_shrubs_prep$species))
+
+# compare shrub lists
+#These are the species that are in the species list that are NOT in abcover_full
 difshr <- setdiff(ab_shrubs, shrub_shrubs)
-difshr 
+difshr
+
 
 # new.shrub_leaftype <- shrub_leaftype %>%
 #   add_row(species = "", leaftype = "")
@@ -422,6 +426,8 @@ cover_bylfstatus <- abcover_omitground %>% # total percent cover of shrubs_nativ
     dplyr::select(!c(lfstatus_count_per_transect)) %>% 
   ungroup() 
 
+# view(cover_bylfstatus)
+
 join_cover <- cover_bylfstatus %>% 
    dplyr::select(site_rep, lifeform_status, lifeform_status_percentcover) %>%
   unite("join", 1:2, sep = "_")
@@ -438,7 +444,7 @@ cover_bylfstatusleaftype <- abcover_omitground %>%
   left_join(join_cover, by = "join") %>% 
    dplyr::select(!c(join))
 
-# view(percentcover)
+# view(cover_bylfstatusleaftype)
 ```
 
 ```{r view data - lifeform_status_leaftype_percentcover }
@@ -446,7 +452,7 @@ cover_bylfstatusleaftype <- abcover_omitground %>%
 # hist(percentcover$lifeform_status_leaftype_percentcover) 
 # 
 # # jitter - all sites
-# cover1 <- ggplot(data = percentcover,
+# ggplot(data = percentcover,
 #        aes(y = lifeform_status_leaftype_percentcover*100, x = site, color = lifeform_status)) +
 #   geom_point() +
 #   facet_wrap(~lifeform_status)
@@ -465,55 +471,65 @@ cover_bylfstatusleaftype <- abcover_omitground %>%
 
 ```
 
-### percent cover by leaftype
-```{r percent cover by leaftype}
-cover_byleaftype <- abcover_omitground %>% 
-  group_by(site_rep, lifeform_status_leaftype) %>% 
-  dplyr::summarize(
-    count_per_transect = n_distinct(site_rep_dist),
-    percentcover = n_distinct(site_rep_dist)/41
-    ) 
-```
-
-- Here I'm transposing the dataframes from long to wide  because I want to visualize native shrub cover by non-native grass cover.
-```{r transpose}
+- Here I'm transposing the dataframes from long to wide  because I want to visualize native shrub by leaftype cover by non-native grass cover.
+```{r transpose cover_bylfstatus}
 cover_bylfstatus_wide <- cover_bylfstatus %>%
-   dplyr::select(!c(count_per_transect)) %>%
-   pivot_wider(names_from = lifeform_status_leaftype, values_from = percentcover) %>%
-   replace_na(replace = list(grass_native = 0, grass_nonnative = 0,
-                             forb_native = 0, forb_nonnative = 0, forb_unknown = 0,
+  dplyr::select(site, site_rep, lifeform_status, lifeform_status_percentcover) %>% 
+   pivot_wider(names_from = lifeform_status, values_from = lifeform_status_percentcover) %>%
+   replace_na(replace = list(grass_native = 0,  # Replace NA with 0 for each value column
+                             grass_nonnative = 0,
+                             forb_native = 0,
+                             forb_nonnative = 0,
+                             forb_unknown = 0,
                              shrub_native = 0,
                              fern_native = 0,
-                             unknown_unknown = 0))  # Replace NA with 0 for each value column
+                             unknown_unknown = 0))
+# view(cover_bylfstatus_wide)
 
-cover_byleaftype_wide <- cover_byleaftype %>% 
-  pivot_wider(names_from = lifeform_status_leaftype, values_from = percentcover) %>%
-  replace_na(replace = list(native_fern_NA = 0, 
+cover_byleaftype_wide <- cover_bylfstatusleaftype %>% 
+  dplyr::select(site, site_rep, lifeform_status_leaftype, lifeform_status_leaftype_percentcover) %>% 
+  pivot_wider(names_from = lifeform_status_leaftype, values_from = lifeform_status_leaftype_percentcover) %>%
+  replace_na(replace = list(fern_native_NA = 0,
                             unknown_unknown_NA = 0,
-                            native_forb_NA = 0, nonnative_forb_NA = 0, unknown_forb_NA = 0,
-                            native_shrub_dead_shrub = 0, native_shrub_nonsclero = 0, native_shrub_sclerophyllous = 0,
-                            native_grass_NA = 0, nonnative_grass_NA = 0)) 
-  
-#view(cover_byleaftype_wide)
+                            forb_native_NA = 0,
+                            forb_nonnative_NA = 0,
+                            forb_unknown_NA = 0,
+                            shrub_native_dead_shrub = 0,
+                            shrub_native_nonsclero = 0,
+                            shrub_native_sclerophyllous = 0,
+                            grass_native_NA = 0,
+                            grass_nonnative_NA = 0))
+
+# view(cover_byleaftype_wide)
 ```
  
 # REGRESSIONS
-## SHRUBS
-This is the spread of 
-- non-native grass cover by native shrub cover... 
-```{r regression nngrass x shrub}
-cover1 <- ggplot(data = cover_bylfstatus_wide, 
-       aes(y = grass_nonnative*100, x = shrub_native*100)) + 
-   geom_point() +
+This is the variation of...
+### x = scl 
+- y = non-native grass cover 
+```{r}
+ggplot(data = (cover_byleaftype_wide %>%  
+                 filter(shrub_native_sclerophyllous > 0.01)
+               ), 
+       aes(x = shrub_native_sclerophyllous*100,
+           y = grass_nonnative_NA*100
+           )) + 
+   geom_point(aes(color = site), size = 3) +
+   scale_color_manual(values = c("blue", "maroon", "maroon", "maroon", "maroon", "maroon")) +
   geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
   labs(
-    x = "Native shrub cover (%)",
+    x = "Schlerophylous shrub cover (%)",
     y = "Non-native grass cover (%)",
-    title = "Linear regression of non-native grass by native shrub percent cover"
-    )
+    title = "Linear regression of non-native grass by sclerophyllous shrub percent cover"
+    ) +
+scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
+  theme_bw()
+
 
 # Fit the linear model
-model.s <- lm(grass_nonnative ~ shrub_native, data = cover_bylfstatus_wide)
+model.s <- lm(grass_nonnative_NA ~ shrub_native_sclerophyllous, data = cover_byleaftype_wide %>%  
+                 filter(shrub_native_sclerophyllous > 0.01)) # response variable ~ independent variable
 
 # Print the summary of the model
 model.s_summary <- summary(model.s)
@@ -521,6 +537,199 @@ model.s_summary <- summary(model.s)
 # Extract the R^2 value
 r_squared <- round(model.s_summary$r.squared, 3)
 print(paste("Multiple R^2:", r_squared))
+#  "Multiple R^2: 0.442"
+```
+
+### x = css
+y = non-native grass cover 
+```{r}
+ggplot(data = (cover_byleaftype_wide %>%  
+                 filter(shrub_native_nonsclero > 0.01)
+               ), 
+       aes( x = shrub_native_nonsclero*100, 
+            y = grass_nonnative_NA*100)
+       ) + 
+   geom_point(aes(color = site), size = 3) +
+   scale_color_manual(values = c("blue", "blue", "maroon", "maroon", "maroon", "maroon", "maroon")) +
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
+  labs(
+    x = "Sage scrub cover (%)",
+    y = "Non-native grass cover (%)",
+    title = "Linear regression of non-native grass by sage scrub shrub percent cover"
+    ) +
+scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
+  theme_bw()
+
+
+# Fit the linear model <- for all sites
+model.s <- lm(grass_nonnative_NA ~ shrub_native_nonsclero, # response variable ~ independent variable
+              data = cover_byleaftype_wide %>%  
+                 filter(shrub_native_nonsclero > 0.01))
+# Print the summary of the model
+model.s_summary <- summary(model.s)
+# Extract the R^2 value
+r_squared <- round(model.s_summary$r.squared, 3)
+print(paste("Multiple R^2:", r_squared))
+# [1] "Multiple R^2: 0.327" <-- all sites
+
+# Fit the linear model <- for sites 1 and 2
+model.s2 <- lm(grass_nonnative_NA ~ shrub_native_nonsclero, # response variable ~ independent variable
+              data = cover_byleaftype_wide %>%  
+                 filter(shrub_native_nonsclero > 0.01) %>% 
+                filter(site == "1" | site == "2"))
+model.s2_summary <- summary(model.s2)
+r_squared_s2 <- round(model.s2_summary$r.squared, 3)
+print(paste("Multiple R^2:", r_squared_s2))
+# [1] "Multiple R^2: 0.684" <-- sites 1 and 2
+```
+
+### x = total shrub
+
+- y = shrub cover by leaftype
+```{r}
+ggplot(data = (cover_bylfstatusleaftype %>%  
+                 filter(lifeform_status == "shrub_native") %>% 
+              mutate(site = case_when(
+                           site %in% c("INT1", "INT2", "INT3", "INT4", "INT5") ~ "INT",
+                           TRUE ~ site)
+                        )
+               ), 
+       aes(y = lifeform_status_leaftype_percentcover*100, 
+           x = lifeform_status_percentcover*100)) + 
+   # geom_point(aes(color = site), size = 3) +
+   # scale_color_manual(values = c("blue", "green", "maroon", "maroon", "maroon", "maroon", "maroon")) +
+   
+  geom_point(aes(color = lifeform_status_leaftype), size = 3) +
+   scale_color_manual(values = c("black", "gray", "green")) +
+   
+   scale_shape_manual(values = c(4, 1, 16)) +
+  
+ # geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
+  labs(
+    x = "Total shrub cover (%)",
+    y = "Shrub cover by leaf type (%)",
+    title = "Total shrub cover as a product of dead, non-scl, or scl shrubs"
+    ) +
+scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
+  theme_bw() +
+  geom_abline(intercept = 0, slope = 1) +
+  facet_wrap(~site) # lifeform_status_leaftype
+
+```
+
+
+### x = nn grass
+
+- scl shrub cover by nn grass
+```{r regression nngrass x scl shrub}
+ ggplot(data = cover_byleaftype_wide %>%  filter(shrub_native_sclerophyllous > 0.01), 
+       aes(x = grass_nonnative_NA*100, 
+         y = shrub_native_sclerophyllous*100)) + 
+  # geom_point()+
+     geom_point(aes(color = site), size = 3) +
+     scale_color_manual(values = c("blue", "maroon", "maroon", "maroon", "maroon", "maroon")) +
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
+  labs(
+    x = "Non-native grass cover (%)",
+    y = "Native scl shrub cover (%)",
+    title = "Linear regression of  scl shrub cover by non-native grass cover"
+    ) +
+  scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
+  theme_bw()
+
+# Fit the linear model
+model.s <- lm(shrub_native_sclerophyllous ~ grass_nonnative_NA, data = cover_byleaftype_wide %>% filter(shrub_native_sclerophyllous > 0.01)) # response variable ~ independent variable
+
+# print slope and intercept
+cf <- round(coef(model.s), 3)
+cat("Intercept:", cf[1], "\n")
+cat("Slope:", cf[2], "\n")
+# cf <- coef(model.s).   # <-- old code
+# Intercept <- cf$(Intercept)
+# Slope <- cf[2]
+# Intercept <- round(Intercept, 3)
+# Slope <- round(Slope, 3)
+# print(paste("Intercept:", Intercept))
+# print(paste("Slope:", Slope))
+
+
+# Print the summary of the model
+model.s_summary <- summary(model.s)
+cat("Multiple R^2:", round(summary(model.s)$r.squared, 3), "\n")
+# # Extract the R^2 value
+# r_squared <- round(model.s_summary$r.squared, 3)   # <- old code
+# print(paste("Multiple R^2:", r_squared))
+# [1] "Multiple R^2: 0.442"
+```
+
+- y = sage scrub cover
+
+```{r}
+ggplot(data = cover_byleaftype_wide %>%  
+         filter(shrub_native_nonsclero > 0.01) %>% 
+         filter(site == "1" | site == "2"), 
+       aes(x = grass_nonnative_NA*100, 
+         y = shrub_native_nonsclero*100)) + 
+      geom_point(aes(color = site), size = 3) +
+   scale_color_manual(values = c("blue", "blue", "maroon", "maroon", "maroon", "maroon", "maroon")) +
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
+  labs(
+    x = "Non-native grass cover (%)",
+    y = "Non-scl shrub cover (%)",
+    title = "Linear regression of  non-scl shrub cover by non-native grass cover"
+    ) +
+  scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
+  theme_bw()
+
+# Fit the linear model
+model.s <- lm(shrub_native_nonsclero ~ grass_nonnative_NA, # response variable ~ independent variable
+              data = cover_byleaftype_wide %>% 
+                filter(shrub_native_nonsclero > 0.01) %>% 
+                filter(site == "1" | site == "2")
+              )
+
+# Print the summary of the model
+model.s_summary <- summary(model.s)
+
+# Extract the R^2 value
+r_squared <- round(model.s_summary$r.squared, 3)
+print(paste("Multiple R^2:", r_squared))
+# [1] "Multiple R^2: 0.327" <-- all sites
+# [1] "Multiple R^2: 0.684" <-- sites 1 and 2
+```
+
+- y = total shrub cover
+```{r}
+ggplot(data = cover_bylfstatus_wide,
+       aes(x = grass_nonnative*100, 
+         y = shrub_native*100)) + 
+      geom_point(aes(color = site), size = 3) +
+   scale_color_manual(values = c("blue", "blue", "maroon", "maroon", "maroon", "maroon", "maroon")) +
+  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid") + # se = confidence interval 
+  labs(
+    x = "Non-native grass cover (%)",
+    y = "Total shrub cover (%)",
+    title = "Linear regression of  total shrub cover by non-native grass cover"
+    ) +
+  scale_x_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set x-axis limits and breaks
+  scale_y_continuous(limits = c(0, 100), breaks = seq(0, 100, by = 10)) + # Set y-axis limits and breaks
+  theme_bw()
+
+# Fit the linear model
+model.s <- lm(grass_nonnative ~ shrub_native, data = cover_bylfstatus_wide) # response variable ~ independent variable
+
+# Print the summary of the model
+model.s_summary <- summary(model.s)
+
+# Extract the R^2 value
+r_squared <- round(model.s_summary$r.squared, 3)
+print(paste("Multiple R^2:", r_squared))
+# [1] "Multiple R^2: 0.734"
+
 # adjusted_r_squared <- round(model.s_summary$adj.r.squared, 3)
 # print(paste("Adjusted R^2:", adjusted_r_squared))
 
@@ -529,50 +738,33 @@ print(paste("Multiple R^2:", r_squared))
 # Adjusted R-squared = adjusts for the number of predictors in the model.  It provides a more accurate measure when comparing models with a different number of predictors.
 ```
 
-- native shrub cover by non-native grass cover ...
-```{r regression shrub x nn grass}
-cover2 <- ggplot(data = cover_bylfstatus_wide, 
-       aes(y = shrub_native*100, x = grass_nonnative*100, color = site)) + 
-   geom_point(size = 3) +
-  scale_color_manual(values = c("blue", "green", "maroon", "maroon", "maroon", "maroon", "maroon")) +
-  geom_smooth(method = "lm", se = TRUE, color = "gray50", linetype = "solid")  +
-  xlim(0, 100) +
-  ylim(0, 100) +
-  theme_bw() +
-  labs(
-    x = "Non-native grass cover (%)",
-    y = "Native shrub cover (%)",
-    title = "Linear regression of native shrub by non-native grass percent cover"
-    )
 
-model.g <- lm(shrub_native ~ grass_nonnative, data = cover_bylfstatus_wide)
-model.g_summary <- summary(model.g)
-r_squared <- round(model.g_summary$r.squared, 3)
-print(paste("Multiple R^2:", r_squared))
-```
-
-- native shrub cover by leaftype by non-native grass cover ...
+- y = native shrub cover by leaf type
 ```{r regression shrub leaftype x nn grass}
-sch1 <- ggplot(data = cover_byleaftype_wide) +
-  
-  geom_point(aes(x = nonnative_grass_NA * 100, y = native_shrub_nonsclero * 100, color = "Native Shrub Nonsclero"), size = 4, show.legend = TRUE) +
-  geom_smooth(aes(x = nonnative_grass_NA * 100, y = native_shrub_nonsclero * 100, color = "Native Shrub Nonsclero"), 
-              method = "lm", se = TRUE, linetype = "solid", show.legend = TRUE) +
-  
-  geom_point(aes(x = nonnative_grass_NA * 100, y = native_shrub_sclerophyllous * 100, color = "Native Shrub Sclero"), size = 4,  show.legend = TRUE) +
-  geom_smooth(aes(x = nonnative_grass_NA * 100, y = native_shrub_sclerophyllous * 100, color = "Native Shrub Sclero"), 
-              method = "lm", se = TRUE, linetype = "dashed", show.legend = TRUE) +
-  labs(
-    x = "Percent cover non-native grass (%)",
-    y = "Percent cover native Shrub (%)",
-    title = "Comparison of Native Shrub percent cover by Nonnative Grass percent cover",
-    color = "Legend"
-    ) +
-  scale_color_manual(values = c("Native Shrub Nonsclero" = "blue", "Native Shrub Sclero" = "red"),
-                     labels = c("Non-sclerophyllous", "Sclerophyllous")) +
-  xlim(0, 100) +
-  ylim(0, 100) +
-  theme_bw()
+
+# broken code
+
+
+# ggplot(data = cover_byleaftype_wide) +
+#   
+#   geom_point(aes(x = nonnative_grass_NA * 100, y = native_shrub_nonsclero * 100, color = "Native Shrub Nonsclero"), size = 4, show.legend = TRUE) +
+#   geom_smooth(aes(x = nonnative_grass_NA * 100, y = native_shrub_nonsclero * 100, color = "Native Shrub Nonsclero"), 
+#               method = "lm", se = TRUE, linetype = "solid", show.legend = TRUE) +
+#   
+#   geom_point(aes(x = nonnative_grass_NA * 100, y = native_shrub_sclerophyllous * 100, color = "Native Shrub Sclero"), size = 4,  show.legend = TRUE) +
+#   geom_smooth(aes(x = nonnative_grass_NA * 100, y = native_shrub_sclerophyllous * 100, color = "Native Shrub Sclero"), 
+#               method = "lm", se = TRUE, linetype = "dashed", show.legend = TRUE) +
+#   labs(
+#     x = "Percent cover non-native grass (%)",
+#     y = "Percent cover native Shrub (%)",
+#     title = "Comparison of Native Shrub percent cover by Nonnative Grass percent cover",
+#     color = "Legend"
+#     ) +
+#   scale_color_manual(values = c("Native Shrub Nonsclero" = "blue", "Native Shrub Sclero" = "red"),
+#                      labels = c("Non-sclerophyllous", "Sclerophyllous")) +
+#   xlim(0, 100) +
+#   ylim(0, 100) +
+#   theme_bw()
 
 #only six transects had schlero shrubs present: INT 1-5, Site1 transect 4
 #cover_byleaftype_wide %>% filter(native_shrub_sclerophyllous > 0) %>% group_by(site_rep, year) %>%  summarize(native_shrub_sclerophyllous = native_shrub_sclerophyllous)
@@ -588,9 +780,9 @@ sch1 <- ggplot(data = cover_byleaftype_wide) +
 # print(paste("Multiple R^2:", r_squared))
 ```
 
-## forbs
+- y = native and non-native forb cover
 ```{r regression forb x grass}
-ggplot(data = cover_bylfstatus_wide) +
+ggplot(data = cover_bylfstatus_wide) + #%>%  filter(forb_native > 0.01 | forb_nonnative > 0.01 | forb_unknown > 0.01)) +
   geom_point(aes(x = grass_nonnative * 100, y = forb_native * 100, color = "forb_native"), show.legend = TRUE) +
   geom_smooth(aes(x = grass_nonnative * 100, y = forb_native * 100, color = "forb_native"), 
               method = "lm", se = TRUE, linetype = "solid", show.legend = TRUE) +
@@ -600,7 +792,7 @@ ggplot(data = cover_bylfstatus_wide) +
   labs(
     x = "Percent cover non-native grass (%)",
     y = "Percent cover native forb (%)",
-    title = "Comparison of Native forb percent cover by Nonnative Grass percent cover",
+    title = "Comparison of native and non-native forb percent cover by Nonnative Grass percent cover",
     color = "Legend"
     ) +
   scale_color_manual(values = c("forb_native" = "blue", "forb_nonnative" = "red"),
@@ -608,9 +800,33 @@ ggplot(data = cover_bylfstatus_wide) +
   xlim(0, 100) +
   ylim(0, 100) +
   theme_bw()
+
+
+# Fit the linear model
+model.s <- lm(forb_native ~ grass_nonnative, data = cover_bylfstatus_wide) # response variable ~ independent variable
+
+# Print the summary of the model
+model.s_summary <- summary(model.s)
+
+# Extract the R^2 value
+r_squared <- round(model.s_summary$r.squared, 3)
+print(paste("Multiple R^2:", r_squared))
+# [1] "Multiple R^2: 0.01"
+
+
+# Fit the linear model
+model.s <- lm(forb_nonnative ~ grass_nonnative, data = cover_bylfstatus_wide) # response variable ~ independent variable
+
+# Print the summary of the model
+model.s_summary <- summary(model.s)
+
+# Extract the R^2 value
+r_squared <- round(model.s_summary$r.squared, 3)
+print(paste("Multiple R^2:", r_squared))
+# [1] "Multiple R^2: 0.097"
 ```
 
-## grass
+- y = native grass
 ```{r regression grass x grass}
 ggplot(data = cover_bylfstatus_wide) +
   geom_point(aes(x = grass_nonnative * 100, y = grass_native * 100, color = "grass_native"), show.legend = TRUE) +
